### refactor the code to take into account the different structures of the file formats. Using a plugin approach (HEAD -> refactoring)
>Fri, 26 Feb 2021 07:00:10 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add log configuration in the package during the distribution to avoid warnings
>Fri, 26 Feb 2021 06:57:59 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add dependencies in setup.py (origin/refactoring)
>Thu, 18 Feb 2021 14:14:21 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Change requirements to requirements.txt
>Thu, 18 Feb 2021 13:49:27 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add licence in the header of each python file
>Thu, 18 Feb 2021 06:26:00 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Refactoring
>Thu, 18 Feb 2021 06:15:51 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### adding chirp mass function (origin/main, origin/HEAD, main)
>Thu, 7 Jan 2021 10:19:24 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### cleanup
>Fri, 18 Dec 2020 13:19:00 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### adding docs
>Fri, 18 Dec 2020 11:57:17 -0600

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)



