@@ -1,4 +1,14 @@
-### refactor the code to take into account the different structures of the file formats. Using a plugin approach (HEAD -> refactoring)
+### Add tests (HEAD -> refactoring)
+>Fri, 26 Feb 2021 07:09:13 +0100
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### refactor the code to take into account the different structures of the file formats. Using a plugin approach
 >Fri, 26 Feb 2021 07:00:10 +0100
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
